# paddle

./: CMakeLists.txt  runner.zsh
src/: drawable.h  game.cpp  game.h  logger.h  main.cpp  position.h  tile.cpp  tile.h
src/utils/: CMakeLists.txt  stopwatch.cpp  stopwatch.h
test/: CMakeLists.txt  stopwatch_test.cpp
